Spelling and grammar fixes and alignments

--- a/career.css
+++ b/career.css
@@ -92,9 +92,9 @@ li {
     width: 350px;
 	height: 350px;
     padding-bottom: 5px;
-	padding-left: 5px;
+	padding-right: 5px;
     margin-bottom: 60px;
-	margin-left: 30px;
+	margin-left: 150px;
 	margin-right: 30px;
 	background-color: hsla(0,0%,0%, 0.2);
 	border-radius: 30px;
@@ -109,7 +109,7 @@ li {
 	padding-left: 5px;
     margin-bottom: 60px;
 	margin-left: 30px;
-	margin-right: 30px;
+	margin-right: 150px;
 	background-color: hsla(0,0%,0%, 0.2);
 	border-radius: 30px;
 }
