--- a/lithuania.css
+++ b/lithuania.css
@@ -88,7 +88,7 @@ li {
 
 .container {
 	background-image: url("mainbg3.jpg");
-	height: 2300px;
+	height: 2320px;
 	border-radius: 50px;
 }
 .text p {
